1209_myPortfolio_Make MyInfo Component2_MenuSideBar fixed 클래스 부여하기
- scrollBar가 일정한 포인트를 기점으로 <MenuSideBar>의 position이 fixed로 변경되도록 구현하기 성공!!!!! 야호!!!!!

구현방법
1) window.eventListener('scroll', onScroll); 을 통해, 스크롤 시 onScroll이 실행되도록 했다.
2) onScroll 내부의 if문을 통해, state가 변경되도록 하였고, 이 state에 따라 <MenuSideBar>의 클래스가 결정되도록 하였다. 
  ( * 템플릿 리터럴(Template Literal) 문법 사용)

--- a/src/App.scss
+++ b/src/App.scss
@@ -127,6 +127,9 @@
   top: 0;
   right: 0;
   background: rgb(74, 66, 145);
+  &.onFixed {
+    position: fixed;
+  }
   .menuSideBar {
     padding: 100% 0;
     box-sizing: border-box;
